#coinbank logo fix on mobile

--- a/assets/src/style/my.scss
+++ b/assets/src/style/my.scss
@@ -274,6 +274,8 @@ a {
     font-size: 24px;
     color: $darkgray2;
     display: block;
+    height:40px;
+    line-height: 34px;
     &:hover {
       color: $white;
     }
@@ -288,6 +290,8 @@ a {
     margin-left: auto;
     color: $white;
     line-height: 0;
+    height:40px;
+    line-height:30px
   }
   &.active {
     background: $white;
@@ -315,14 +319,23 @@ a {
       border-bottom: 1px solid transparent;
     }
   }
-  @media (max-width: 640px) {
+  @media (max-width: 669px) {
     padding:0 40px;
+  }
+  @media (max-width: 640px) {
+
     &>a {
       font-size: 18px;
     }
   }
-  @media (max-width: 500px) {
+  @media (max-width: 563px) {
     padding:0 15px;
+    .coinsbank {
+      img {
+        width: 30px;
+        height: 30px;
+      }
+    }
     .hashtag{
       font-size: 18px;
     }
@@ -330,7 +343,20 @@ a {
       margin-right: 20px;
     }
   }
-  @media (max-width: 370px) {
+  @media (max-width: 420px) {
+    height: 40px;
+    .hashtag {
+      line-height:35px;
+    }
+    .coinsbank {
+      margin-left: 10px;
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
+  @media (max-width: 400px) {
     .hashtag{
       font-size: 16px;
     }
@@ -339,8 +365,41 @@ a {
       margin-right: 13px;
     }
   }
-  @media (max-width: 420px) {
-    height: 40px;
+  @media (max-width: 380px) {
+    &>a, .hashtag{
+      font-size: 14px;
+    }
+  }
+  @media (max-width: 320px) {
+    &>a,.hashtag{
+      font-size: 13px;
+    }
+  }
+  @media (min-width: 768px) and (max-height: 671px) {
+    padding: 0 40px;
+  }
+  @media (min-width: 768px) and (max-height: 630px) {
+    &>a,.hashtag{
+      font-size: 20px;
+    }
+  }
+  @media (min-width: 768px) and (max-height: 570px) {
+    &>a,.hashtag{
+      font-size: 18px;
+    }
+    &>a {
+      margin-right: 15px;
+    }
+    .coinsbank {
+      margin-left:15px;
+      img {
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+  @media (min-width: 768px) and (max-height: 450px) {
+    padding: 0 15px;
   }
 }
 
